--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   font_awesome_flutter: ^10.8.0 # icon จาก fontawesome.com
   image_picker: ^1.1.2 # open gallery
   animated_notch_bottom_bar: ^1.0.3 # ใช้ทำ bottom navigation bar ในแอป
+  url_launcher: ^6.3.1 # ใช้โทร เมลล์ได้
 
 dev_dependencies:
   flutter_test:
